# dismech

./: .ai-blame.yaml  .codespell-ignore-words.txt  .copier-answers.yml  .gitattributes  .gitignore  .linkml-reference-validator-sources.yaml  .linkml-reference-validator.yaml  .mcp.json  .pre-commit-config.yaml  .yamlfix.toml  .yamllint.yaml  404.html  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  PMC_CANDIDATES.txt  README.md  REF_VALIDATOR_BUG_REPORT_SPECIAL_CHARS.md  _typos.toml  add-and-write.edict.json  ai.just  commit.txt  compliance_report.csv  compliance_report.json  config.public.mk  index.html  initial-diseases-curation-candidates.tsv  initial-diseases.md  initial-diseases.tsv  justfile  mkdocs.yml  package-lock.json  package.json  pr.md  project.justfile  pyproject.toml  results.json  sitemap.xml  (+1 more)
.claude/: settings.json
.github/: PR_520_BODY.md  ai-controllers.json  cron-profiles.yaml  protected-path-deletions-allowlist.txt
about/: index.html
app/: data.js  hpo_category_cache.json  index.html  schema.js  search_sort_state.js
assets/: Fanconi Anemia.xlsx
attic/: PLAN.md  test_linkml_data_qc.py
causal_models/: PHENOCAM_DATA_MODEL.md  README.md
conf/: mondo_prioritizer.yaml  oak_config.yaml  qc_config.yaml  reference_validator_config.yaml
dashboard/: capability_metrics.html  capability_metrics.json  index.html  not_yet_curated.html  not_yet_curated.json  priority.html  priority.json  reports.json
details/: index.html
docs/: about.md  cancer-curation-sop.md  causal-modeling-integration-plan.md  cron-profiles.md  cx2-ndex-publishing.md  data-model.md  embeddings.md  frequency-evidence-guidelines.md  frequency-evidence-proposal.md  gwas-tcell-validation-report.md  history.md  index.md  k562-poc-validation.md  mondo-prioritizer.md  notes.md  pathographs.md  pheno-cam-design.md  projects.md  psychiatric-curation-sop.md  quality-control.md  synthvae-bridge.md  use-cases.md
elements/: 404.html  index.html  sitemap.xml
embeddings/: index.html
examples/: README.md  gene_term_example.yaml  mondo_prioritizer_candidates.tsv  mondo_prioritizer_config.yaml
exports/: mondo_emc.tsv
frontpage-candidates/: index.html
history/: README.md
models/: BIOMD0000000613.config.yaml  BIOMD0000000613.ext.ant  BIOMD0000000613.xml
pathographs/: MONDO_0000030.json  MONDO_0000107.json  MONDO_0000127.json  MONDO_0000133.json  MONDO_0000136.json  MONDO_0000141.json  MONDO_0000170.json  MONDO_0000193.json  MONDO_0000200.json  MONDO_0000211.json  MONDO_0000212.json  MONDO_0000262.json  MONDO_0000327.json  MONDO_0000330.json  MONDO_0000341.json  MONDO_0000355.json  MONDO_0000359.json  MONDO_0000390.json  MONDO_0000447.json  MONDO_0000453.json  MONDO_0000463.json  MONDO_0000495.json  MONDO_0000507.json  MONDO_0000548.json  MONDO_0000645.json  MONDO_0000690.json  MONDO_0000705.json  MONDO_0000764.json  MONDO_0000820.json  MONDO_0000845.json  MONDO_0000863.json  MONDO_0000878.json  MONDO_0000890.json  MONDO_0000902.json  MONDO_0000903.json  MONDO_0000979.json  MONDO_0001029.json  MONDO_0001044.json  MONDO_0001056.json  MONDO_0001056__HER2-Positive_Gastric_Cancer.json  (+1330 more)
projects/: ANTIFUNGAL.md  ANTIMICROBIAL.md  ANTIVIRAL.md  AUTOIMMUNE.md  AUTONOMOUS_LABS.md  CANCER.md  CHECKPOINT_INHIBITORS.md  CHILDHOOD_CANCER.md  CHRONIC.md  COMORBIDITIES.md  EPIDERMOLYSIS_BULLOSA.md  EPILEPSY.md  FANCONI_ANEMIA_GAP_ANALYSIS.md  G2P.md  GENESETS.md  GRIN_DISORDERS.md  GWAS_MECHANISMS.md  INBORN_ERRORS_OF_METABOLISM.md  INHERITANCE_ENRICHMENT.md  LIPOYLATION.md  LYSOSOMAL_STORAGE_DISEASES.md  MAXO_NCIT_TREATMENTS.md  MAXO_NCIT_TREATMENTS_MANUAL.tsv  MC4R_PATHWAY_OBESITY.md  MONDO_EHR_MAPPINGS.md  NAMO_RD_MODELS.md  NCIT_TREATMENT_INDICATIONS.md  NICU.md  NTD.md  ORGAN_FIBROSIS_COLLABORATION.md  PATHOPHYSIOLOGY_SCALE_FEASIBILITY.md  PHENO_CAM.md  RARE_DISEASE_NO_ICD_CODE.md  REACTOME_DISEASES.md  RESPIRATORY_INFECTIONS.md  RETINOPATHIES.md  SCDS_OPENSCIENTIST_ENRICHMENT.md  SKELETAL_DYSPLASIAS.md  SPACE_BIOLOGY.md  STRUCTURAL_BIOLOGY.md  (+6 more)
proxy/: .dev.vars.example  package-lock.json  package.json  wrangler.toml
references_cache/: CGDS_HGNC_9585.md  CGGV_assertion_00a5b707-a265-4af0-a7e1-f15734ea42b9-2018-06-19T160000.000Z.md  CGGV_assertion_012b9b15-798a-46e2-8164-61a829ceeda1-2023-08-09T160000.000Z.md  CGGV_assertion_0157f793-9232-4700-bbf0-dfb16270f688-2020-06-29T174101.533Z.md  CGGV_assertion_019ffb7a-be5f-482d-9adf-e28d5aadaede-2024-07-23T160000.000Z.md  CGGV_assertion_0265f091-a67d-4521-b6bd-5a110bd5356f-2019-08-06T160000.000Z.md  CGGV_assertion_0284b3cd-38af-4309-8ce4-054a0379e693-2023-10-10T160000.000Z.md  CGGV_assertion_02a69e27-77dc-41bd-83d2-dda9c224ee43-2021-07-27T205239.729Z.md  CGGV_assertion_02d4089a-94dd-42b6-ab09-dc258db00ae9-2025-01-14T200000.000Z.md  CGGV_assertion_0407dc2e-1cab-4043-889d-4695b043d7b3-2019-03-19T160000.000Z.md  CGGV_assertion_0439e75f-fc1b-4841-8c9a-17f3568ce8a4-2023-03-01T170000.000Z.md  CGGV_assertion_044f1413-e1cd-4212-9e9a-a4d9c66c08dc-2025-02-26T170000.000Z.md  CGGV_assertion_04ca29c1-6b44-474c-b54b-1c8be52de172-2022-12-14T170000.000Z.md  (+29768 more)
research/: 46_XX_Gonadal_Dysgenesis-deep-research-falcon.md  (+3603 more)
(+11279 files in other folders)
