[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "dismech"
description = "This is the project description."
authors = [
  {name = "My Name", email = "my-name@my-org.org"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]

dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "koza>=2.2.0",
  "linkml-data-qc[viz]",
  "linkml-reference-validator>=0.1.4rc8",
  "linkml-runtime >=1.9.4",
  "linkml-term-validator>=0.2.1",
  "typer>=0.9.0",
]

[project.scripts]
clingen-go = "dismech.clingen.cli:main"

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
    "deep-research-client[cyberian]==0.2.0",
    "biolink-model",
]
embeddings = [
    "linkml-store[llm]>=0.2.0",
    "umap-learn>=0.5.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "plotly>=5.0.0",
]

[tool.uv.sources]
biolink-model = { git = "https://github.com/biolink/biolink-model.git", branch = "master" }

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/dismech/datamodel/dismech_pydantic.py",
  "src/dismech/datamodel/dismech.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
# Medical/scientific terms that codespell misidentifies:
# infarction (myocardial infarction), cyclin (protein), abl (ABL gene),
# connectin (titin/connectin protein), inactivate, heterogenous (in paper quotes),
# UES (upper esophageal sphincter), MIS (MIS-C), OND, TE, CAFs (cancer-associated
# fibroblasts), acapella (Acapella medical device),
# ect (ECT = electroconvulsive therapy), vas (vas deferens),
# esge (European Society of Gastrointestinal Endoscopy),
# ege (eosinophilic gastroenteritis),
# targetting (British spelling in PMID:28535799 abstract)
ignore-words-list = "linke,infarction,cyclin,abl,connectin,inactivate,heterogenous,ues,mis,ond,te,cafs,acapella,bu,survivin,trough,tese,selectin,pase,ect,vas,esge,ege,targetting"
quiet-level = 3

# Ref.: https://github.com/astral-sh/ruff
[tool.ruff]
exclude = [
  "src/dismech/datamodel/dismech.py",
  "src/dismech/datamodel/dismech_pydantic.py",
  "src/dismech/datamodel/__init__.py",
  "docs/schema/dismech.py",
  "attic/",
]
